welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:24: error: object java.awt.Color is not a value
  setCouleurBrosse(Color)
                   ^MethodsPicture:51: error: value Yellow is not a member of object java.awt.Color
  faireV(Color.Yellow);
               ^